SameTree (iterative), SymmetricTree (iterative+recursive)